--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ data/raw/*.csv filter=lfs diff=lfs merge=lfs -text
 data/raw/sales_train_evaluation.csv filter=lfs diff=lfs merge=lfs -text
 data/raw/sell_prices.csv filter=lfs diff=lfs merge=lfs -text
 data/raw/sales_train_validation.csv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
